--- a/slide.html
+++ b/slide.html
@@ -1,46 +1,16 @@
 <html>
   <head>
-    <style>
-      .wrapper {
-        position: relative;
-        overflow: hidden;
-        width: 100px;
-        height: 100px;
-        border: 1px solid black;
-        margin: 50px auto;
-      }
-
-      .slide {
-        position: absolute;
-        width: 100px;
-        height: 100px;
-        display: inline-block;
-      }
-
-      .blue { background: blue; }
-      .red { background: red; }
-      .green { background: green;}
-      .orange { background: orange; }
-      .purple { background: purple; }
-
-      nav {
-        width: 200px;
-        text-align: center;
-        margin: 20px auto;
-      }
-    </style> 
+    <link rel="stylesheet" href="slide.css">
   </head>
   <body>
     <div id="app">
       <carousel>
-        <div class="slide blue"></div>
-        <div class="slide red"></div>
-        <div class="slide green"></div>
-        <div class="slide orange"></div>
-        <div class="slide purple"></div>
+        <div class="slide"
+             v-for="image in images"
+             :style="{backgroundImage: 'url(./images/'+ image +')'}"
+        ></div>
       </carousel>
     </div>
-
 
     <script src="https://cdn.jsdelivr.net/npm/vue@2.5.13/dist/vue.js"></script>
     <script>
@@ -49,102 +19,120 @@
           return {
             slides: [],
             currentSlide: 0,
-            slideWidth: 100
+            slideWidth: 0,
+            transition: '.25s ease-out',
+            windowHeight: null
           }
         },
         template: `
           <div>
-            <p>{{ currentSlide }}</p>
-            <div class="wrapper">
+            <div class="wrapper" :style="{height: windowHeight + 'px'}">
               <slot></slot>
             </div>
             <nav>
-              <button>prev</button>
+              <button @click="prev()">prev</button>
               <button @click="next()">next</button>
             </nav>
           </div>
         `,
         methods: {
+          incrementSlide() {
+            this.currentSlide = (this.currentSlide !== this.lastSlideIndex) ? this.currentSlide + 1 : this.currentSlide = 0
+          },
+          decrementSlide() {
+            this.currentSlide = (this.currentSlide !== 0) ?  this.currentSlide - 1 : this.lastSlideIndex
+          },
+          slidesFirstPosition(slideIndex) {
+            return (slideIndex === this.lastSlideIndex) ? -this.slideWidth : slideIndex * this.slideWidth
+          },
+          slideIsLeftOfWrapper(slideIndex) {
+            return slideIndex === this.currentSlide - 1
+          },
+          positionSlideLeftOfWrapper() {
+            return -1 * this.slideWidth
+          },
+          positionSlides(slideIndex) {
+            if (this.slideIsLeftOfWrapper(slideIndex)) {
+              return this.positionSlideLeftOfWrapper()
+            }
+
+            if (slideIndex === 0) {
+              return (this.slides.length - this.currentSlide) * this.slideWidth
+            } else {
+              return (this.currentSlide > slideIndex) ?
+                (this.currentSlide - slideIndex) * this.slideWidth
+                : (slideIndex - this.currentSlide) * this.slideWidth
+            }
+          },
+          getSlidesLeftPosition(slideIndex) {
+            return (this.slidesAtStartingPosition) ? this.slidesFirstPosition(slideIndex) : this.positionSlides(slideIndex)
+          },
           next() {
-            let left
+            this.incrementSlide()
+            this.slides.forEach((slide, slideIndex) => {
+              if (slideIndex === this.currentSlide || slideIndex === this.currentSlide - 1) {
+                slide.elm.style.transition = this.transition
+              } else {
+                slide.elm.style.transition = (this.currentSlide === 0 && slideIndex === this.lastSlideIndex) ? this.transition : null
+              }
+              slide.elm.style.left = `${this.getSlidesLeftPosition(slideIndex)}px`
+            })
 
-            (this.currentSlide !== this.slides.length - 1) ?
-              this.currentSlide = this.currentSlide + 1 :
-              this.currentSlide = 0
-
-              this.slides.forEach((slide, index, array) => {
-                if (this.currentSlide === 0) {
-                  if (index === 0) {
-                    slide.elm.style.left = '0'
-                  } else if (index === array.length - 1) {
-                    left = -this.slideWidth
-                  } else {
-                    left = index * this.slideWidth
-                  }
-                } else {
-                  if (index === this.currentSlide - 1) {
-                    left = -1 * this.slideWidth
-                  } else {
-                    if (index === 0) {
-                      left = (array.length - this.currentSlide) * this.slideWidth
-                    } else {
-                      if (this.currentSlide > index) {
-                        left = (this.currentSlide - index) * this.slideWidth
-                      } else {
-                        left = (index - this.currentSlide) * this.slideWidth
-                      }
-                    }
-                  }
-                }
-
-                if (index === this.currentSlide || index === this.currentSlide - 1) {
-                  slide.elm.style.transition = '.3s'
-                } else {
-                  if (this.currentSlide === 0 && index === array.length - 1) {
-                    slide.elm.style.transition = '.3s'
-                  } else {
-                    slide.elm.style.transition = null
-                  }
-                }
-                slide.elm.style.left = `${left}px`
-              })
-
+          },
+          prev() {
+            this.decrementSlide()
+            this.slides.forEach((slide, slideIndex) => {
+              if (slideIndex === this.currentSlide || slideIndex === this.currentSlide + 1) {
+                slide.elm.style.transition = this.transition
+              } else {
+                slide.elm.style.transition = (this.currentSlide === this.lastSlideIndex && slideIndex === 0) ? this.transition : null
+              }
+              slide.elm.style.left = `${this.getSlidesLeftPosition(slideIndex)}px`
+            })
+          }
+        },
+        computed: {
+          slidesAtStartingPosition() {
+            return this.currentSlide === 0
+          },
+          lastSlideIndex() {
+            return this.slides.length - 1
+          },
+          prevSlideIndex() {
+            return this.currentSlide - 1
           }
         },
         mounted() {
-          this.slides = this.$slots.default.filter(slot => {
-            return slot.elm.nodeName !== '#text'
+          this.slideWidth = this.$el.offsetWidth
+          this.windowHeight = window.innerHeight
+          this.slides = this.$slots.default.filter(slot => slot.elm.nodeName !== '#text')
+
+          this.slides.forEach((slide, index) => {
+            let left = this.slidesFirstPosition(index)
+            slide.elm.style.left = `${left}px`
+            slide.elm.style.height = `${window.innerHeight}px`
           })
 
-          this.slides.forEach((slide, index, array) => {
-            let left
-
-            if(index === 0) {
-              slide.elm.style.left = '0'
-            } else if(index === array.length - 1) {
-              left = - this.slideWidth
-            } else {
-              left = index * this.slideWidth
-            }
-            slide.elm.style.left = `${left}px`
+          window.addEventListener('resize', () => {
+            this.slides.forEach(slide => {
+              // TODO need to throttle this
+              slide.elm.style.height = `${window.innerHeight}px`
+            })
           })
         }
       })
 
       new Vue({
-        el: '#app'
+        el: '#app',
+        data: {
+          images: [
+            'IMG_3424.JPG',
+            'IMG_3430.JPG',
+            'IMG_3453.JPG',
+            'IMG_3483.JPG',
+          ]
+        }
       })
-
-      function next() {
-        var currentSlide = document.querySelector('.current-slide')
-        var nextSlide = document.querySelector('.next-slide')
-        var prevSlide = document.querySelector('.prev-slide')
-
-
-        currentSlide.className = currentSlide.className.replace('current-slide active', 'prev-slide active')
-        prevSlide.className = prevSlide.className.replace('prev-slide active', 'next-slide')
-        nextSlide.className = nextSlide.className.replace('next-slide', 'current-slide active')
-      }
     </script>
   </body>
 </html>
