added nicer nav and CSS, removed old fils, add new images

--- a/index.html
+++ b/index.html
@@ -1,44 +1,32 @@
-<!DOCTYPE html>
 <html>
-<head>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="main.css">
-</head>
-<body>
+  <head>
+    <link rel="stylesheet" href="carousel.css">
+  </head>
+  <body>
+    <div id="app">
+      <carousel>
+        <div class="slide"
+             v-for="image in images"
+             :style="{backgroundImage: 'url(./images/'+ image +')'}"
+        ></div>
+      </carousel>
+    </div>
 
-<h2>Automatic Slideshow</h2>
-<p>Change image every 2 seconds:</p>
-
-<div class="slideshow-container">
-
-  <div class="mySlides fade">
-    <div class="numbertext">1 / 3</div>
-    <img src="img_nature_wide.jpg" style="width:100%">
-    <div class="text">Caption Text</div>
-  </div>
-
-  <div class="mySlides fade">
-    <div class="numbertext">2 / 3</div>
-    <img src="img_fjords_wide.jpg" style="width:100%">
-    <div class="text">Caption Two</div>
-  </div>
-
-  <div class="mySlides fade">
-    <div class="numbertext">3 / 3</div>
-    <img src="img_mountains_wide.jpg" style="width:100%">
-    <div class="text">Caption Three</div>
-  </div>
-
-</div>
-<br>
-
-<div style="text-align:center">
-  <span class="dot"></span>
-  <span class="dot"></span>
-  <span class="dot"></span>
-</div>
-
-<script src="main.js"></script>
-
-</body>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.5.13/dist/vue.js"></script>
+    <script src="./carousel.js"></script>
+    <script>
+      new Vue({
+        el: '#app',
+        data: {
+          images: [
+            '01_bg.jpg',
+            '02_bg.jpg',
+            '03_bg.jpg',
+            '04_bg.jpg',
+            '05_bg.jpg',
+          ]
+        }
+      })
+    </script>
+  </body>
 </html>
